# ai-kit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.vi.md  ROLL_OUT.md  pyproject.toml  python_kit.py  python_kit_legacy.py  relay_kit.py  relay_kit_compat.py  relay_kit_cycle_log.py  relay_kit_legacy.py  relay_kit_public_cli.py  run-daily-deep-checkpoints.cmd  run-relay-kit-checkpoint.cmd  run-relay-kit-smoke.cmd  run-relay-kit-summary.cmd  skills.manifest.yaml
.relay-kit/: version.json
ai-kit-command-shims/: review.md
ai_kit_v3/: __init__.py  adapters.py  generator.py  srs_policy.py
docs/: codex-merge-prompt.md  codex-round3-merge-prompt.md  codex-round4-merge-prompt.md  deep-checkpoint-open-issues-2026-04-18.md  discipline-utilities-baseline-proposal.md  discipline-utilities-gauntlet-scorecard.md  discipline-utilities-gauntlet-task-log-template.md  discipline-utilities-gauntlet.md  gap-matrix.md  how-to-write-skills.md  migration-order.md  public-docs-index.md  relay-kit-5min-quickstart.md  relay-kit-accessibility-review.md  relay-kit-adapter-diagnostics.md  relay-kit-agent-profiles.md  relay-kit-ai-kit-migration-matrix.md  relay-kit-beta-soak-log.md  relay-kit-bundle-manifest.md  relay-kit-claude-12-adoption-matrix.md  relay-kit-command-lifecycle.md  relay-kit-commercial-dossier.md  relay-kit-compatibility-cycle.md  relay-kit-compatibility-log.md  relay-kit-context-continuity-design-note.md  relay-kit-context-continuity.md  relay-kit-context-governance.md  relay-kit-contract-sync.md  relay-kit-enterprise-bundle.md  relay-kit-final-differentiation-update.md  relay-kit-graph-intelligence-adoption.md  (+41 more)
(+1275 files in other folders)
